<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	
	    <Button
	        android:id="@+id/button1"
	        android:layout_width="150dp"
			android:layout_height="50dp"
        	android:layout_margin="10dp"
	        android:layout_gravity="center"
	        android:text="@string/buttonlabel1" 
	        android:background="@drawable/selector_grey"
	        android:textColor="@color/standard_white"
	        android:textSize="20sp"
	        android:textStyle="bold"/>
	    
	    <Button
	        android:id="@+id/button2"
	        android:layout_width="150dp"
			android:layout_height="50dp"
        	android:layout_margin="10dp"
	        android:layout_gravity="center"
	        android:text="@string/buttonlabel2" 
	        android:background="@drawable/selector_grey"
	        android:textColor="@color/standard_white"
	        android:textSize="20sp"
	        android:textStyle="bold"/>
	    
	    <Button
	        android:id="@+id/button3"
	        android:layout_width="150dp"
			android:layout_height="50dp"
        	android:layout_margin="10dp"
	        android:layout_gravity="center"
	        android:text="@string/buttonlabel3" 
	        android:background="@drawable/selector_grey"
	        android:textColor="@color/standard_white"
	        android:textSize="20sp"
	        android:textStyle="bold"/>
	    
	    <Button
	        android:id="@+id/button4"
	        android:layout_width="150dp"
			android:layout_height="50dp"
        	android:layout_margin="10dp"
	        android:layout_gravity="center"
	        android:text="@string/buttonlabel4" 
	        android:background="@drawable/selector_grey"
	        android:textColor="@color/standard_white"
	        android:textSize="20sp"
	        android:textStyle="bold"/>
	    
	    <Button
	        android:id="@+id/button5"
	        android:layout_width="150dp"
			android:layout_height="50dp"
        	android:layout_margin="10dp"
	        android:layout_gravity="center"
	        android:text="@string/buttonlabel5" 
	        android:background="@drawable/selector_grey"
	        android:textColor="@color/standard_white"
	        android:textSize="20sp"
	        android:textStyle="bold"/>
	    
	    <Button
	        android:id="@+id/button6"
	        android:layout_width="150dp"
			android:layout_height="50dp"
        	android:layout_margin="10dp"
	        android:layout_gravity="center"
	        android:text="@string/buttonlabel6" 
	        android:background="@drawable/selector_grey"
	        android:textColor="@color/standard_white"
	        android:textSize="20sp"
	        android:textStyle="bold"/>
	    
	        <Button
	        android:id="@+id/button7"
	        android:layout_width="150dp"
			android:layout_height="50dp"
        	android:layout_margin="10dp"
	        android:layout_gravity="center"
	        android:text="@string/buttonlabel7" 
	        android:background="@drawable/selector_grey"
	        android:textColor="@color/standard_white"
	        android:textSize="20sp"
	        android:textStyle="bold"/>
	    
	    <Button
	        android:id="@+id/button8"
	        android:layout_width="150dp"
			android:layout_height="50dp"
        	android:layout_margin="10dp"
	        android:layout_gravity="center"
	        android:text="@string/buttonlabel8" 
	        android:background="@drawable/selector_grey"
	        android:textColor="@color/standard_white"
	        android:textSize="20sp"
	        android:textStyle="bold"/>
	    
	       <Button
	        android:id="@+id/button9"
	        android:layout_width="150dp"
			android:layout_height="50dp"
        	android:layout_margin="10dp"
	        android:layout_gravity="center"
	        android:text="@string/buttonlabel9" 
	        android:background="@drawable/selector_grey"
	        android:textColor="@color/standard_white"
	        android:textSize="20sp"
	        android:textStyle="bold"/>
	    
	    <Button
	        android:id="@+id/button10"
	        android:layout_width="150dp"
			android:layout_height="50dp"
        	android:layout_margin="10dp"
	        android:layout_gravity="center"
	        android:text="@string/buttonlabel10" 
	        android:background="@drawable/selector_grey"
	        android:textColor="@color/standard_white"
	        android:textSize="20sp"
	        android:textStyle="bold"/>
	    
	    <Button
	        android:id="@+id/button11"
	        android:layout_width="150dp"
			android:layout_height="50dp"
        	android:layout_margin="10dp"
	        android:layout_gravity="center"
	        android:text="@string/buttonlabel11" 
	        android:background="@drawable/selector_grey"
	        android:textColor="@color/standard_white"
	        android:textSize="20sp"
	        android:textStyle="bold"/>
	    
	    <Button
	        android:id="@+id/button12"
	        android:layout_width="150dp"
			android:layout_height="50dp"
        	android:layout_margin="10dp"
	        android:layout_gravity="center"
	        android:text="@string/buttonlabel12" 
	        android:background="@drawable/selector_grey"
	        android:textColor="@color/standard_white"
	        android:textSize="20sp"
	        android:textStyle="bold"/>
	    
	    <Button
	        android:id="@+id/button13"
	        android:layout_width="150dp"
			android:layout_height="50dp"
        	android:layout_margin="10dp"
	        android:layout_gravity="center"
	        android:text="@string/buttonlabel13" 
	        android:background="@drawable/selector_grey"
	        android:textColor="@color/standard_white"
	        android:textSize="20sp"
	        android:textStyle="bold"/>
	    
	    <Button
	        android:id="@+id/button14"
	        android:layout_width="150dp"
			android:layout_height="50dp"
        	android:layout_margin="10dp"
	        android:layout_gravity="center"
	        android:text="@string/buttonlabel14" 
	        android:background="@drawable/selector_grey"
	        android:textColor="@color/standard_white"
	        android:textSize="20sp"
	        android:textStyle="bold"/>
	    
	    <Button
	        android:id="@+id/button15"
	        android:layout_width="150dp"
			android:layout_height="50dp"
        	android:layout_margin="10dp"
	        android:layout_gravity="center"
	        android:text="@string/buttonlabel15" 
	        android:background="@drawable/selector_grey"
	        android:textColor="@color/standard_white"
	        android:textSize="20sp"
	        android:textStyle="bold"/>

	</LinearLayout>
</ScrollView>