<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/dialogAlertAddPersonTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/d_title"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/blueLineImageView"
        android:contentDescription="@string/d_ip"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/dialogAlertAddPersonTitleTextView"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/blueLineImageView"
        android:padding="10dp"
        android:text="@string/d_ip"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/ipaddressEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView2"
        android:layout_toRightOf="@+id/textView2"
        android:hint=""
        android:ems="10" >
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:padding="10dp"
        android:text="@string/d_user"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/TextView01"
        android:layout_alignLeft="@+id/ipaddressEditText"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ipaddressEditText"
        android:hint=""
        android:ems="10" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TextView01"
        android:padding="10dp"
        android:text="@string/d_pass"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/TextView02"
        android:layout_alignLeft="@+id/usernameEditText"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/usernameEditText"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TextView02"
        android:padding="10dp"
        android:text="@string/d_port"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/portEditText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passwordEditText"
        android:layout_below="@+id/passwordEditText"
        android:hint=""
        android:ems="10" />

    <TextView
        android:id="@+id/TextView04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TextView03"
        android:padding="10dp"
        android:text="@string/d_pin"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/pinEditText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/portEditText"
        android:layout_below="@+id/portEditText"
        android:hint=""
        android:ems="10" />
    
    
    <ImageView
        android:id="@+id/ImageView01"
        android:contentDescription="@string/d_save"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TextView04"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ImageView01"
        android:text="@string/d_save"
        android:textSize="20sp" />

</RelativeLayout>